cluster/apps/media/travelstories/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelstories
  namespace: media
  labels:
    app.kubernetes.io/instance: travelstories
    app.kubernetes.io/name: travelstories
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: travelstories
      app.kubernetes.io/name: travelstories
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: travelstories
        app.kubernetes.io/name: travelstories
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: travelstories
          image: registry.${SECRET_CLUSTER_DOMAIN}/homelab/travelstories:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: caddyfile
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddyfile
          configMap:
            name: travelstories-caddyfile
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/protocol: http
  labels:
    app.kubernetes.io/instance: travelstories
    app.kubernetes.io/name: travelstories
  name: travelstories
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: travelstories
    app.kubernetes.io/name: travelstories
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_CLUSTER_DOMAIN}"
    # traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: networking-forward-auth@kubernetescrd, networking-buffering-small@kubernetescrd
  labels:
    app.kubernetes.io/instance: travelstories
    app.kubernetes.io/name: travelstories
  name: travelstories
  namespace: media
spec:
  # ingressClassName: "traefik"
  rules:
    - host: "travelstories.${SECRET_CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: travelstories
                port:
                  number: 80
  tls:
    - hosts:
        - "tdarr.${SECRET_CLUSTER_DOMAIN}"
      secretName: "${SECRET_CLUSTER_CERTIFICATE_DEFAULT}"
